<resources>
    <string name="app_name">My Simple Chat</string>
    <string name="welcome_chat">Welcome To My Simple Chat</string>
    <string name="have_account">ALREADY HAVE ACCOUNT</string>
    <string name="need_account">NEED A NEW ACCOUNT?</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="change_pic">CHANGE PICTURE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="message">Message</string>
    <string name="name_of_messenger">Name of messenger</string>
    <string name="display_name">Display Name</string>
</resources>
