<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D1C4E9"
        tools:context=".activities.MainActivity">

    <ImageView
            android:layout_width="113dp"
            android:layout_height="110dp" app:srcCompat="@drawable/ic_message"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.501"/>
    <TextView

            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textStyle="bold|italic"
            android:textAllCaps="true"
            android:text="@string/welcome_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <Button
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/have_account"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAccount" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.521"/>
    <Button
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/need_account"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:id="@+id/createActButton" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonAccount"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.521"/>
</androidx.constraintlayout.widget.ConstraintLayout>