<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D1C4E9"
        tools:context=".activities.CreateAccountActivity">

    <androidx.cardview.widget.CardView
            android:id="@+id/cardCreateAccount"
            app:cardCornerRadius="13dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            android:background="@color/colorAccent"
            android:layout_width="300dp"
            android:layout_height="380dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
                android:background="@color/colorAccent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:src="@drawable/ic_message"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
            <TextView
                    android:textStyle="bold"
                    android:text="@string/create_a_new_account"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/accountDisplayNameEt"
                        android:layout_marginBottom="10dp"
                        android:inputType="textPersonName"
                        android:hint="@string/display_name"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:id="@+id/accountEmailEt"
                        android:layout_marginBottom="10dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/enter_email"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:id="@+id/accountPasswordEt"
                        android:layout_marginBottom="10dp"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <RelativeLayout
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="45dp">
                    <Button
                            android:id="@+id/accountCreateActBtn"
                            android:stateListAnimator="@drawable/state_list_animator_z"
                            android:background="@drawable/bt_shape"
                            android:textColor="#ffffff"
                            android:hint="@string/create_a_new_account"
                            android:layout_width="165dp"
                            android:layout_height="50dp"/>

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>