<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D1C4E9"
        tools:context=".activities.LoginActivity">


    <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            app:cardCornerRadius="13dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:orientation="vertical"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/login"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/enter_email"
                        android:padding="10dp"
                        android:id="@+id/loginEmailEt"
                        android:paddingBottom="2dp"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:id="@+id/loginPasswordEt"
                        android:layout_marginTop="15dp"
                        android:hint="@string/password"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimary"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <Button
                        android:id="@+id/loginButtonId"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/login"
                        android:background="@drawable/bt_shape"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="40dp"
                        android:layout_width="150sp"
                        android:layout_height="50sp"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>